[package]
name = "reda-lef"
version = "0.1.0"
edition = "2024"
description = "Lef file library"
repository = "https://github.com/MoleSir/reda-lef.git"
license = "MIT OR Apache-2.0"
build = "build.rs"


[dependencies]
derive_builder = "0.20.2"
libc = "0.2.178"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"


[build-dependencies]
cc = "1"
