[package]
name = "reda-lef"
version = "0.1.0"
edition = "2024"
description = "Lef file library"
repository = "https://github.com/MoleSir/reda-lef.git"
license = "MIT OR Apache-2.0"
build = "build.rs"


[dependencies]
libc = "0.2.178"
paste = "1.0.15"
thiserror = "2.0.17"


[build-dependencies]
cc = "1"
